[gd_scene load_steps=2 format=3 uid="uid://lgt5o6qelkwv"]

[ext_resource type="Script" path="res://world/door.gd" id="1_dmtt6"]

[node name="Door" type="Area2D" groups=["doors"]]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_dmtt6")

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(32, 0)

[node name="LeftCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(-32, 0)

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, 32)

[node name="UpCast" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, -32)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
